[TF-207] Mapping parameters from Pohoda to eshop

--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -67,6 +67,7 @@ parameters:
             - '*/src/Form/Admin/ProductFormTypeExtension.php'
             - '*/src/Form/Admin/PromoCodeFormTypeExtension.php'
             - '*/src/Model/Product/ProductRepository.php'
+            - '*/src/Model/Product/Transfer/PohodaProductMapper.php'
 
         ObjectCalisthenics\Sniffs\Metrics\PropertyPerClassLimitSniff:
             - '*/src/Model/Order/Order.php'
