Added a new parameter for SK contact list ID in Ecomail.

--- a/config/parameters.yaml.dist
+++ b/config/parameters.yaml.dist
@@ -106,4 +106,5 @@ parameters:
     google_translate_enabled: false
 
     ecomail_api_key: 5ec3934b9d96b5ec3934b9d96e
-    ecomail_list_id: 1
+    ecomail_list_id: 2
+    ecomail_list_id_sk: 3
