--- a/config/shopsys-routing/routing_front_en.yaml
+++ b/config/shopsys-routing/routing_front_en.yaml
@@ -93,3 +93,7 @@ front_store_detail:
 front_brand_list:
     path: /brands-overview/
     defaults: { _controller: App\Controller\Front\BrandController:listAction }
+
+front_sale_product_list:
+    path: /sale/{friendlyUrl}/
+    defaults: { _controller: App\Controller\Front\ProductController:listBySaleCategoryAction }
