--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -68,6 +68,7 @@ parameters:
             - '*/src/Form/Admin/PromoCodeFormTypeExtension.php'
             - '*/src/Model/Product/ProductRepository.php'
             - '*/src/Model/Product/Transfer/PohodaProductMapper.php'
+            - '*/src/Controller/Front/ProductController.php'
 
         ObjectCalisthenics\Sniffs\Metrics\PropertyPerClassLimitSniff:
             - '*/src/Model/Order/Order.php'
