--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get install apt-transport-https
 
 ### SQLSRVSTART
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
-RUN curl https://packages.microsoft.com/config/debian/9/prod.list > /etc/apt/sources.list.d/mssql-release.list
+RUN curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
 RUN apt-get update -yqq \
     && ACCEPT_EULA=Y apt-get install -y msodbcsql17 unixodbc-dev unixodbc \
     && rm -r /var/lib/apt/lists/*
