--- a/config/services/cron.yaml
+++ b/config/services/cron.yaml
@@ -56,7 +56,7 @@ services:
 
     App\Model\Product\Transfer\ProductImageImportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '0', readableName: 'Import obrázků k produktům z Pohoda IS' }
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import obrázků k produktům z Pohoda IS' }
 
     ######################################
 
