[TF-553] Create order statuses queue

--- a/config/services/cron.yaml
+++ b/config/services/cron.yaml
@@ -139,6 +139,10 @@ services:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Export objednávek a uživatelů do IS Pohoda' }
 
+    App\Model\Order\Transfer\Status\OrderStatusImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import stavů objednávek z IS Pohoda' }
+
     App\Model\Newsletter\Transfer\EcomailExportCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Export odběratelů emailů do Ecomail' }
