--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -26,6 +26,7 @@ twig:
         - 'Admin/Form/productFlags.html.twig'
         - 'Admin/Form/imageUploadFields.html.twig'
         - 'Admin/Form/orderItems.html.twig'
+        - 'Admin/Form/transportPricesFields.html.twig'
     strict_variables: true
     globals:
         globalMultipleFormSetting: '@Shopsys\FrameworkBundle\Component\Form\MultipleFormSetting'
