Changed transport price calculation to use action prices.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -714,3 +714,7 @@ services:
     App\Model\Transport\TransportPriceFactory: ~
 
     Shopsys\FrameworkBundle\Model\Transport\TransportPriceFactory: '@App\Model\Transport\TransportPriceFactory'
+
+    App\Model\Transport\TransportPriceCalculation: ~
+
+    Shopsys\FrameworkBundle\Model\Transport\TransportPriceCalculation: '@App\Model\Transport\TransportPriceCalculation'
