[TF-408] Show sorted order items in administration

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -25,6 +25,7 @@ twig:
         - 'Admin/Form/youtubeVideos.html.twig'
         - 'Admin/Form/productFlags.html.twig'
         - 'Admin/Form/imageUploadFields.html.twig'
+        - 'Admin/Form/orderItems.html.twig'
     strict_variables: true
     globals:
         globalMultipleFormSetting: '@Shopsys\FrameworkBundle\Component\Form\MultipleFormSetting'
