[TF-639] Increase file upload limit for product

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,5 +1,8 @@
 FROM henzigo/shopsys-framework:v9.0 as base
 
+# copy php.ini configuration
+COPY ${project_root}/docker/php-fpm/php-ini-overrides.ini /usr/local/etc/php/php.ini
+
 USER root
 
 RUN apt-get install apt-transport-https
