design: add function for show image on the hover

--- a/config/images.yaml
+++ b/config/images.yaml
@@ -97,6 +97,11 @@
             height: 50
             crop: false
             occurrence: 'Front-end: gift on product detail'
+        -   name: largeThumbnail
+            width: 500
+            height: 500
+            crop: false
+            occurrence: 'Front-end: hover image for variant products on the product detail'
         -   name: biggerThumbnail
             width: 90
             height: 90
