--- a/config/services.yaml
+++ b/config/services.yaml
@@ -93,6 +93,8 @@ services:
 
     App\Component\Image\ImageFacade:
         arguments: ['%shopsys.image_url_prefix%']
+        calls:
+            - { method: setCdnDomain, arguments: ['%env(CDN_DOMAIN)%'] }
 
     Shopsys\FrameworkBundle\Component\Image\ImageFacade: '@App\Component\Image\ImageFacade'
 
