--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -17,6 +17,8 @@ server {
         try_files @app @app;
     }
     location / {
+        add_header "Access-Control-Allow-Origin" "*";
+
         # try to serve existing files directly, fallback to @app
         try_files $uri @app;
 
@@ -49,6 +51,8 @@ server {
     }
 
     location @app {
+        add_header "Access-Control-Allow-Origin" "";
+
         fastcgi_pass php-upstream;
         include fastcgi_params;
         # use $realpath_root instead of $document_root
