--- a/config/forms.yaml
+++ b/config/forms.yaml
@@ -83,3 +83,7 @@ services:
     App\Form\Admin\FlagFormTypeExtension:
         tags:
             - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Product\Flag\FlagFormType }
+
+    App\Form\Admin\UnitFormTypeExtension:
+        tags:
+            - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Product\Unit\UnitFormType }
