--- a/config/services.yaml
+++ b/config/services.yaml
@@ -689,3 +689,5 @@ services:
     App\Component\Cofidis\CofidisClientFactory:
         arguments:
             - '%cofidis_config%'
+
+    Shopsys\ReadModelBundle\Image\ImageViewFacade: '@App\Model\Product\View\ImageViewFacade'
