--- a/config/services/cron_default.yaml
+++ b/config/services/cron_default.yaml
@@ -4,9 +4,10 @@ services:
         autoconfigure: true
         public: false
 
-    ###########################
-    ## DEFAULT CRON INSTANCE ##
-    ###########################
+    # ONCE PER DAY ----------------------------------------------------------------------------------
+    App\Model\Category\Transfer\CategoryImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '23', minutes: '30', readableName: 'Import změněných kategorií z Pohoda IS' }
 
     App\Model\GoPay\GoPayAvailablePaymentsCronModule:
         arguments:
@@ -18,67 +19,6 @@ services:
         tags:
             - { name: shopsys.cron, hours: '1', minutes: '00', readableName: 'Stažení Balikobot odběrných míst' }
 
-    #    App\Model\Product\Mall\MallProductExportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '23', minutes: '00' }
-
-    Shopsys\FrameworkBundle\Model\Product\Availability\ProductAvailabilityCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Přepočet dostupností produktů' }
-
-    Shopsys\FrameworkBundle\Model\Product\ProductVisibilityImmediateCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Přepočet viditelností produktů (pouze produkty označené k přepočtu)' }
-
-    #    App\Model\Product\Mall\MallProductDeleteCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '23', minutes: '00', readableName: 'Smazání produktů z Mall' }
-
-    #####################################
-    ## PRODUCTS TRANSFER CRON INSTANCE ##
-    #####################################
-
-    App\Model\Product\Transfer\ProductImportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import změněných produktů a zařazení produktů do kategorií z Pohoda IS' }
-
-    App\Model\Product\Transfer\ProductImageImportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import obrázků k produktům z Pohoda IS' }
-
-    ######################################
-
-    Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '0', minutes: '0', readableName: "Export všech produktů do Elasticsearch" }
-
-    #########################
-    ## CATEGORIES TRANSFER ##
-    #########################
-    App\Model\Category\Transfer\CategoryImportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '23', minutes: '30', readableName: 'Import změněných kategorií z Pohoda IS' }
-
-    #########################
-
-    App\Model\Product\Translation\ProductTranslationCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Automatický překlad produktů přes Google Translate' }
-
-    Shopsys\FrameworkBundle\Model\Feed\DailyFeedCronModule: ~
-
-    overriddenDailyFeedCronModule:
-        class: App\Model\Feed\DailyFeedCronModule
-        tags:
-            - { name: shopsys.cron, hours: '*/6', minutes: '0', readableName: 'Generování denních feedů' }
-
-    Shopsys\FrameworkBundle\Model\Feed\HourlyFeedCronModule: ~
-
-    overriddenHourlyFeedCronModule:
-        class: Shopsys\FrameworkBundle\Model\Feed\HourlyFeedCronModule
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '10', readableName: 'Generování hodinových feedů' }
-
     Shopsys\FrameworkBundle\Model\Sitemap\SitemapCronModule: ~
 
     overriddenSitemapCronModule:
@@ -86,43 +26,45 @@ services:
         tags:
             - { name: shopsys.cron, hours: '4', minutes: '0', readableName: 'Generování sitemap' }
 
-    Shopsys\FrameworkBundle\Model\Pricing\Vat\VatDeletionCronModule:
+    Shopsys\FrameworkBundle\Model\Cart\Item\DeleteOldCartsCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Smazání starých sazeb DPH' }
+            - { name: shopsys.cron, hours: '0', minutes: '0', readableName: 'Smazání starých košíků' }
 
-    Shopsys\FrameworkBundle\Model\Product\Pricing\ProductPriceCronModule:
+    # TWICE PER DAY ----------------------------------------------------------------------------------
+    Shopsys\FrameworkBundle\Model\Feed\DailyFeedCronModule: ~
+
+    overriddenDailyFeedCronModule:
+        class: App\Model\Feed\DailyFeedCronModule
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Přepočet cen produktů' }
+            - { name: shopsys.cron, hours: '*/6', minutes: '0', readableName: 'Generování denních feedů' }
 
-    Shopsys\FrameworkBundle\Model\Product\ProductVisibilityMidnightCronModule:
+    # ONCE PER HOUR ----------------------------------------------------------------------------------
+    Shopsys\FrameworkBundle\Model\Feed\HourlyFeedCronModule: ~
+
+    overriddenHourlyFeedCronModule:
+        class: Shopsys\FrameworkBundle\Model\Feed\HourlyFeedCronModule
         tags:
-            - { name: shopsys.cron, hours: '0', minutes: '0', readableName: 'Přepočet viditelností produktů (všechny produkty)' }
+            - { name: shopsys.cron, hours: '*', minutes: '10', readableName: 'Generování hodinových feedů' }
 
-    App\Model\Product\ProductRefreshCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Přeuložení označených produktů pro správný přepočet přiřazení výprodejových štítků apod.' }
-
+    # ALWAYS -----------------------------------------------------------------------------------------
     App\Model\Category\CategorySaleProductsCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Označení kategorií s výprodejovými produkty' }
 
-    Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportChangedCronModule:
+    App\Model\Newsletter\Transfer\EcomailExportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: "Export změněných produktů do Elasticsearch" }
-
-    Shopsys\FrameworkBundle\Model\Cart\Item\DeleteOldCartsCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '0', minutes: '0', readableName: 'Smazání starých košíků' }
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Export odběratelů emailů do Ecomail' }
 
     App\Model\WatchDog\WatchDogCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Hlídač ceny a dostupnosti' }
 
+    Shopsys\FrameworkBundle\Model\Pricing\Vat\VatDeletionCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Smazání starých sazeb DPH' }
+
+    # ERROR PAGES ------------------------------------------------------------------------------------
     # This module should run as last because it creates multiple kernels and fake requests.
     Shopsys\FrameworkBundle\Component\Error\ErrorPageCronModule:
         tags:
             - { name: shopsys.cron, hours: '21', minutes: '10', readableName: 'Vygenerování chybových stránek' }
-
-    App\Model\Newsletter\Transfer\EcomailExportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Export odběratelů emailů do Ecomail' }
