--- a/composer.json
+++ b/composer.json
@@ -136,14 +136,15 @@
         "codeception/module-webdriver": "^1.0",
         "codeception/phpunit-wrapper": "^8.0",
         "phpstan/phpstan": "^0.12",
-        "symfony/var-dumper": "^4.4.0",
-        "symfony/browser-kit": "^4.4.0",
-        "phpunit/phpunit": "^8.0",
-        "shopsys/coding-standards": "9.0.0",
-        "shopsys/http-smoke-testing": "9.0.0",
         "phpstan/phpstan-doctrine": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
-        "sspooky13/yaml-standards": "^5.0.0"
+        "phpunit/phpunit": "^8.0",
+        "psr/event-dispatcher": "^1.0.0",
+        "shopsys/coding-standards": "9.0.0",
+        "shopsys/http-smoke-testing": "9.0.0",
+        "sspooky13/yaml-standards": "^5.0.0",
+        "symfony/browser-kit": "^4.4.0",
+        "symfony/var-dumper": "^4.4.0"
     },
     "conflict": {
         "symfony/symfony": "*"
