--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     <property name="path.root" value="${project.basedir}"/>
     <property name="path.vendor" value="${path.root}/vendor"/>
     <property name="path.framework" value="${path.vendor}/shopsys/framework"/>
-    <property name="path.framework.assets" value="./node_modules/@shopsys/framework"/>
+    <property name="path.framework.assets" value="${path.root}/node_modules/@shopsys/framework"/>
 
     <property name="phpstan.level" value="4"/>
     <property name="check-and-fix-annotations" value="true"/>
