ListedSetItem creation refactoring
- created new ListedSetItemFactory that is responsible for creation of ListedSetItem instances array for given product or from raw data
- data for ListedSetItem::$image are directly exported to Elasticsearch
- ListedProductView: "ready-to-use" instances of ListedSetItem are now passed via constructor
- ProductSetFacade::getAllForElasticByMainProduct renamed to getAllItemsDataByMainProduct as it is used for ListedSetItem creation as well

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -718,3 +718,5 @@ services:
     App\Model\Transport\TransportPriceCalculation: ~
 
     Shopsys\FrameworkBundle\Model\Transport\TransportPriceCalculation: '@App\Model\Transport\TransportPriceCalculation'
+
+    Shopsys\ReadModelBundle\Image\ImageViewFactory: '@App\Model\Image\ImageViewFactory'
