[TF-783] Import legacy slovak descriptions from CSV

--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -24,3 +24,6 @@ services:
         arguments:
             $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
 
+    App\Command\Migrations\ImportLegacySlovakDescriptionsFromCSVCommand:
+        arguments:
+            $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
