Selling denied is now imported from Pohoda. Products with selling denied are not exported to Elastic and sitemap.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -740,3 +740,5 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Accessory\ProductAccessoryRepository: '@App\Model\Product\Accessory\ProductAccessoryRepository'
 
     Shopsys\FrameworkBundle\Model\Product\Accessory\ProductAccessoryFacade: '@App\Model\Product\Accessory\ProductAccessoryFacade'
+
+    Shopsys\FrameworkBundle\Model\Sitemap\SitemapRepository: '@App\Model\Sitemap\SitemapRepository'
