[TF-539] Caching images to redis

--- a/config/packages/snc_redis.yaml
+++ b/config/packages/snc_redis.yaml
@@ -30,6 +30,12 @@ snc_redis:
             dsn: 'redis://%redis_host%'
             options:
                 prefix: '%env(REDIS_PREFIX)%%build-version%'
+        image:
+            type: 'phpredis'
+            alias: 'image'
+            dsn: 'redis://%redis_host%'
+            options:
+                prefix: '%env(REDIS_PREFIX)%%build-version%:cache:image:'
         session:
             type: 'phpredis'
             alias: 'session'
