--- a/config/services.yaml
+++ b/config/services.yaml
@@ -730,3 +730,5 @@ services:
             $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
 
     Shopsys\FrameworkBundle\Model\Product\BestsellingProduct\BestsellingProductFacade: '@App\Model\Product\BestsellingProduct\BestsellingProductFacade'
+
+    App\Model\AdvancedSearchOrder\Filter\OrderExportStatusFilter: ~
