[TF-784] Migration of legacy promo codes and gift certificates from old eshop

--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -27,3 +27,7 @@ services:
     App\Command\Migrations\ImportLegacySlovakDescriptionsFromCSVCommand:
         arguments:
             $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
+
+    App\Command\Migrations\ImportLegacyPromoCodesFromCSVCommand:
+        arguments:
+            $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
