Orders are not sent to Heureka when they contain a product from foreign supplier.

--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -72,6 +72,7 @@ parameters:
             - '*/src/Model/Product/ProductRepository.php'
             - '*/src/Model/Product/Transfer/PohodaProductMapper.php'
             - '*/src/Controller/Front/ProductController.php'
+            - '*/src/Model/Cart/CartFacade.php'
 
         ObjectCalisthenics\Sniffs\Metrics\PropertyPerClassLimitSniff:
             - '*/src/Model/Order/Order.php'
