[TF-819] Import product parameter value position from Pohoda

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -750,3 +750,7 @@ services:
 
     Shopsys\FrameworkBundle\Controller\Admin\ShopInfoController:
         class: App\Controller\Admin\ShopInfoController
+
+    Shopsys\FrameworkBundle\Model\Product\Parameter\ProductParameterValueDataFactoryInterface: '@App\Model\Product\Parameter\ProductParameterValueDataFactory'
+
+    Shopsys\FrameworkBundle\Model\Product\Parameter\ProductParameterValueFactoryInterface: '@App\Model\Product\Parameter\ProductParameterValueFactory'
