easy-coding-standard.yml: add NoUnusedImportsFixer + fix standards

--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -8,6 +8,7 @@ services:
     PhpCsFixer\Fixer\Strict\DeclareStrictTypesFixer: ~
     SlevomatCodingStandard\Sniffs\TypeHints\ReturnTypeHintSpacingSniff: ~
     SlevomatCodingStandard\Sniffs\TypeHints\NullableTypeForNullDefaultValueSniff: ~
+    PhpCsFixer\Fixer\Import\NoUnusedImportsFixer: ~
 
 parameters:
     sets:
